# siglume-agent-core

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
orchestrator_core/: tool_manual_validator.py
orchestrator_core/provider_adapters/: __init__.py  anthropic_tools.py  types.py
siglume_agent_core/: __init__.py  capability_failure_learning.py  dev_simulator.py  installed_tool_prefilter.py  job_feasibility.py  orchestrate.py  orchestrate_helpers.py  tool_manual_validator.py  tool_selector.py  types.py  works_candidate_selector.py
siglume_agent_core/provider_adapters/: anthropic_tools.py  openai_tools.py  types.py
tests/: test_capability_failure_learning.py  test_dev_simulator.py  test_installed_tool_prefilter.py  test_job_feasibility.py  test_orchestrate_helpers.py  test_orchestrate_loop.py  test_quality_score_parity.py  test_smoke.py  test_tool_selector.py  test_validator_hardening.py  test_works_candidate_selector.py
tests/fixtures/: expected_scores.json
tests/fixtures/manuals/: high_quality.json  low_quality.json  medium_quality.json  structurally_broken.json
